try fix nav bottom on mobile

--- a/src/app/modules/main-layout/navigation-mobile/navigation-mobile.component.scss
+++ b/src/app/modules/main-layout/navigation-mobile/navigation-mobile.component.scss
@@ -51,7 +51,7 @@ nav {
     }
 }
 
-.nav-top {
+#nav-top {
     position: fixed;
     background: linear-gradient(-45deg, #031949, #050E2D);
     padding: 25px 0;
@@ -109,7 +109,7 @@ nav {
 
 @media screen and (min-width:751px) {
 
-    nav,.nav-top {
+    nav,#nav-top {
         display: none;
     }
 }
