--- a/src/app/modules/orders/orders2.component.scss
+++ b/src/app/modules/orders/orders2.component.scss
@@ -10,10 +10,10 @@
         min-width: 150px !important;
 
         >p {
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 1;
+            white-space: nowrap;
             overflow: hidden;
+            text-overflow: ellipsis;
+            width: 100%;
         }
     }
 
@@ -34,26 +34,27 @@
         width: 125px !important;
     }
     .header:nth-child(5){
-        width: 75px !important;
+        width: 65px !important;
     }
     .order-state {
         min-width: 125px !important;
 
         >p {
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 1;
+            white-space: nowrap;
             overflow: hidden;
+            text-overflow: ellipsis;
+            width: 100%;
         }
     }
     .order-price {
-        min-width: 75px !important;
+        min-width: 65px !important;
     }
 }
 
 @media screen  and (max-width: 750px){
     #orders{
         width: auto;
+        max-width: calc(100vw);
     }
 }
 
@@ -97,4 +98,11 @@
             display: none;
         }
     }
+}
+
+@media screen and (max-width: 500px){
+    input#orders-search{
+        width: 100% !important;
+    }
+    
 }
